# autoflow

./: .env.example  .gitignore  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Makefile  dspy_program.py  main.py  pyproject.toml
backend/app/: types.py
backend/app/alembic/versions/: 76f4e47a03d3_chunking_setting.py  a849e5f21516_chunking_settings.py
backend/app/api/: main.py
backend/app/api/admin_routes/: feedback.py  models.py  retrieve.py  retrieve_old.py  stats.py  user.py
backend/app/api/routes/: chat.py  chat_engine.py  document.py  download.py
backend/app/core/: db.py
backend/app/evaluation/: evals.py
backend/app/evaluation/evaluators/: e2e_rag_evaluator.py  toxicity.py
backend/app/models/: __init__.py  chat.py  chunk.py  document.py  entity.py  feedback.py  knowledge_base.py  relationship.py  staff_action_log.py
backend/app/models/knowledge_base_scoped/: registry.py
backend/app/rag/: build_index.py  chat.py  chat_config.py  default_prompt.py  llm_option.py  reranker_model_option.py  retrieve.py
backend/app/repositories/: __init__.py  chat.py  chunk.py  document.py  feedback.py  graph.py  knowledge_base.py  user.py
backend/app/tasks/: build_index.py  evaluate.py  knowledge_base.py
backend/app/utils/: dspy.py  tracing.py
backend/app/workflow/: ChatAppWorkflow.py
backend/tests/: test_llms.py
core/: README.md  pyproject.toml
core/autoflow/: main.py
core/autoflow/datasources/: base.py  file.py  web_base.py  web_single_page.py  web_sitemap.py
core/autoflow/db_models/: __init__.py  chunk.py  data_source.py  document.py  entity.py  knowledge_base.py  relationship.py
core/autoflow/knowledge_base/: __init__.py  base.py  config.py  datasource.py
core/autoflow/knowledge_graph/: index.py  types.py
core/autoflow/models/: __init__.py  entity.py  provider.py  relationship.py
core/autoflow/stores/: __init__.py
core/autoflow/utils/: dspy_lm.py
core/docs/: .env.example  autoflow-quickstart.ipynb  tidb-python-sdk-quickstart.ipynb
core/examples/: build-knowledge-search-with-autoflow-and-streamlit.py
core/examples/quickstart/: quickstart.ipynb
core/examples/streamlit/: README.md  build-knowledge-search-with-autoflow-and-streamlit.py  reqs.txt
core/examples/text2sql/: main.py
core/tests/: .env.example  conftest.py  quickstart.ipynb  test_knowledge_base.py  test_llm.py  test_streamlit.py  test_table.py  tidb-client-quickstart.ipynb
core/tests/knowledge_base/: test_kb_with_namespace.py
core/tests/models/: test_model_manager.py
core/tests/test_sqlmodel/: test_sql_model.py
core/tests/tidb-python-sdk/: test_table.py
(+213 files in other folders)
