[project]
name = "tidb-ai-python"
version = "0.2.9"
description = "AutoFlow Python Backend"
authors = [
    { name = "wd0517", email = "me@wangdi.ink" }
]
dependencies = [
    "fastapi>=0.115.6",
    "fastapi-cli>=0.0.5",
    "fastapi-users>=13.0.0",
    "fastapi-pagination>=0.12.25",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "sqlmodel==0.0.19",
    "pymysql>=1.1.1",
    "asyncmy>=0.2.9",
    "tidb-vector>=0.0.14",
    "alembic>=1.14.0",
    "pydantic>=2.10.5",
    # Update Check: https://github.com/pydantic/pydantic/issues/8061
    "pydantic-settings>=2.3.3",
    "redis>=5.0.5",
    "celery>=5.4.0",
    "flower>=2.0.1",
    "httpx-oauth>=0.14.1",
    "uvicorn>=0.30.3",
    "gunicorn>=22.0.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=2.5.1",
    "dspy-ai>=2.4.9",
    "langfuse>=2.59.1",
    "langchain-openai>=0.2.9",
    "ragas>=0.2.6",
    "fuzzywuzzy>=0.18.0",
    "levenshtein>=0.26.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
universal = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.6",
    "pytest-asyncio>=0.25.2",
]

[tool.ruff.lint]
ignore = ["E711", "E712", "F811",  "F841"]
